# cory-learning-pipeline

./: .gitignore  README.md  check_target.py  lift_analysis.py  pyproject.toml
docs/: eval_report.md  insights_objections.md  objection_taxonomy.md  operations.md  refresh_integration_notes.md
src/: config.py  diagnostics.py  export.py  extract.py  qa.py  run_pipeline.py
src/modeling/: build_features.py  train_model.py
src/nlp/: clean_transcripts.py  cluster_transcripts.py  export_tags_csv.py  extract_transcripts.py  tag_objections.py
